--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,3 +1,12 @@
 .layout {
-  background-color: red;
+  display: block;
+  min-height: 100vh;
+  max-width: 345px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+
+  @media (--d) {
+    max-width: 1320px;
+  }
 }
