Edit Author and tag section

--- a/components/Leftside.module.css
+++ b/components/Leftside.module.css
@@ -1,4 +1,8 @@
 .Leftside {
-  position: fixed;
-  margin-top: 200px;
+  display: none;
+  @media (--t) {
+    display: block;
+    position: fixed;
+    margin-top: 200px;
+  }
 }
