--- a/components/Btn.module.css
+++ b/components/Btn.module.css
@@ -2,10 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
-  width: 122px;
-  height: 52px;
+  margin-top: 30px;
+  width: 111px;
+  height: 46px;
   background: var(--c-secondary);
   border-radius: 10px;
-  font-size: 19px;
+  font-size: 16px;
+  @media (--t) {
+    width: 122px;
+    height: 52px;
+    font-size: 19px;
+    margin-top: 40px;
+  }
 }
