--- a/components/Img.module.css
+++ b/components/Img.module.css
@@ -1,5 +1,34 @@
-.Img {
-  margin-top: 60px;
-  margin-left: -60px;
-  border-radius: 30px;
+.aspectRatioContainer {
+  position: relative;
+  height: 0;
+  padding-top: 55%;
 }
+
+.Img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover;
+  border-radius: 20px;
+  margin-top: 30px;
+  @media (--t) {
+    margin-top: 60px;
+    border-radius: 30px;
+  }
+}
+
+/* .Img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  width: 365px;
+  height: 180px;
+  @media (--t) {
+    width: 800px;
+    height: 400px;
+    border-radius: 30px;
+  }
+} */
