--- a/components/Logo.module.css
+++ b/components/Logo.module.css
@@ -1,10 +1,16 @@
 .Logo {
   display: block;
+
+  position: absolute;
   color: var(--c-secondary);
   width: 200px;
   height: 50px;
   margin-left: auto;
   margin-right: auto;
+  @media (--t) {
+    position: relative;
+    /* max-width: 1320px; */
+  }
   svg {
     width: 100%;
     height: 100%;
