--- a/components/Main.module.css
+++ b/components/Main.module.css
@@ -1,5 +1,11 @@
 .Main {
-  width: 680px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
+  @media (--t) {
+    margin-top: 0px;
+
+    width: 860px;
+  }
 }
