--- a/components/PostContent.module.css
+++ b/components/PostContent.module.css
@@ -1,8 +1,17 @@
 .PostContent {
-  font-size: 21px;
+  font-size: 1rem;
   font-weight: normal;
   color: var(--c-secondary);
-  margin-top: 40px;
   letter-spacing: 0.05em;
   line-height: 160%;
+  margin-top: 30px;
+  @media (--t) {
+    margin-top: 40px;
+  }
+}
+
+.Container {
+  max-width: 680px;
+  margin-left: auto;
+  margin-right: auto;
 }
