--- a/components/Postinfo.module.css
+++ b/components/Postinfo.module.css
@@ -1,10 +1,14 @@
 .Postinfo {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 40px;
-  width: 400px;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
-  font-size: 19px;
+  font-size: 16px;
   font-weight: lighter;
+  @media (--t) {
+    width: 400px;
+    font-size: 19px;
+    margin-top: 40px;
+  }
 }
