--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,12 +1,17 @@
 .layout {
-  display: block;
+  display: flex;
+  justify-content: center;
   min-height: 100vh;
-  max-width: 345px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
+  margin-left: 12px;
+  margin-right: 12px;
   margin-top: 50px;
 
   @media (--t) {
+    display: block;
+
     max-width: 1320px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
