--- a/components/Main.module.css
+++ b/components/Main.module.css
@@ -3,9 +3,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+  padding-bottom: 200px;
   @media (--t) {
     margin-top: 0px;
-
     width: 860px;
   }
 }
